--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,16 @@
 # compiled output
 /dist
 /tmp
+app/**/*.js
+app/**/*.js.map
+
 /out-tsc
 # Only exists if Bazel was run
 /bazel-out
 
 # dependencies
 /node_modules
+bower_components/
 
 # profiling files
 chrome-profiler-events*.json
@@ -44,3 +48,7 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# e2e
+e2e/*.js
+e2e/*.map
