--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,10 @@ before_script:
 
 script:
    - ng build --prod
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
+  on:
+    branch: master
