--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+os: linux
 language: node_js
 node_js:
    - '12'
@@ -14,8 +15,8 @@ script:
    - ng build --prod
 deploy:
   provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  cleanup: false
+  token: $GITHUB_TOKEN
   keep_history: true
   on:
     branch: master
