--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 deploy:
   provider: pages
   cleanup: false
-  github_token: $GITHUB_TOKEN
+  github_token: "453fa124c4032cd2b3c4e4119cf2ddc7100248ab"
   keep_history: true
   on:
     branch: master
