--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -33,7 +33,7 @@
         "https://angpos-api.herokuapp.com/"
       ],
       "cacheConfig": {
-        "strategy": "performance",
+        "strategy": "freshness",
         "maxSize": 5,
         "maxAge": "1d",
         "timeout": "3s"
